--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,10 @@
     <div class="story-top">
       <each loop="item in top">
         <switch expression="item.type">
-          <case n="'image'">
-            <include src="partials/image.html"></include>
-          </case>
           <case n="'graphic'">
             <div class="graphic">
-              <if condition="item.value.asset === 'graphic-name.html'">
-                <include src="graphic-name.html"></include>
+              <if condition="item.value.asset === 'map.html'">
+                <include src="map.html"></include>
               </if>
             </div>
           </case>
