--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <include src="partials/footer.html"></include>
-
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
     <script src="./script.js"></script>
   </body>
 </html>
