--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
         <switch expression="item.type">
           <case n="'graphic'">
             <div class="graphic">
-              <if condition="item.value.asset === 'map.html'">
-                <include src="map.html"></include>
+              <if condition="item.value.asset === 'food-map.html'">
+                <include src="food-map.html"></include>
               </if>
             </div>
           </case>
